--- a/styles.css
+++ b/styles.css
@@ -22,15 +22,17 @@ input, button {
   display: block;
   width: 100%;
   padding: 10px;
-  margin-top: 10px;
+  margin: 0px;
   border-radius: 4px;
   border: 1px solid #ddd;
+  box-sizing: border-box;
 }
 
 button {
   color: #fff;
   background: #007BFF;
   cursor: pointer;
+  margin-top: 10px;
 }
 
 button:hover {
