--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
   font-family: Arial, sans-serif;
   background: #f4f4f4;
-  padding: 20px;
-  max-width: 600px;
+  padding: 2em;
+  max-width: 100%;
   margin: auto;
 }
 
@@ -13,7 +13,7 @@ h1 {
 
 form {
   background: #fff;
-  padding: 20px;
+  padding: 1em;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -21,7 +21,7 @@ form {
 input, button {
   display: block;
   width: 100%;
-  padding: 10px;
+  padding: 1em;
   margin: 0px;
   border-radius: 4px;
   border: 1px solid #ddd;
@@ -31,7 +31,7 @@ input, button {
 button {
   color: #fff;
   cursor: pointer;
-  margin-top: 10px;
+  margin-top: 1em;
 }
 
 #deposit-btn {
@@ -51,16 +51,16 @@ button {
 }
 
 #search-results {
-  margin-top: 10px;
+  margin-top: 1em;
 }
 
 #search-results div {
   background: #fff;
-  padding: 20px;
+  padding: 1em;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  margin-bottom: 10px;
+  margin-bottom: 1em;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -85,6 +85,35 @@ button {
 
 #transactions th, #transactions td {
   border: 1px solid #ddd;
-  padding: 10px;
+  padding: 1em;
   text-align: left;
+}
+
+@media (min-width: 600px) {
+  body {
+    max-width: 600px;
+    padding: 20px;
+  }
+  h1 {
+    font-size: 2em;
+  }
+  form {
+    padding: 20px;
+  }
+  input, button {
+    padding: 10px;
+  }
+  button {
+    margin-top: 10px;
+  }
+  #search-results {
+    margin-top: 10px;
+  }
+  #search-results div {
+    padding: 20px;
+    margin-bottom: 10px;
+  }
+  #transactions th, #transactions td {
+    padding: 10px;
+  }
 }
